Download the generated collection

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "chonky": "^2.3.2",
     "chonky-icon-fontawesome": "^2.3.2",
+    "downloadjs": "^1.4.7",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
