--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "chonky": "^2.3.2",
     "chonky-icon-fontawesome": "^2.3.2",
     "downloadjs": "^1.4.7",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-collapsible": "^2.9.0",
     "react-dom": "18.1.0",
+    "react-dropzone": "^14.2.1",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
